# lab2

./: CMakeLists.txt
src/: CMakeLists.txt  integration.cpp  integration.h  integrationMain.cpp  pi.cpp  pi.h  piMain.cpp  quicksort.cpp  quicksort.h  quicksortMain.cpp
test/: CMakeLists.txt  integrationFunctionalTest.cpp  quicksortUnitTest.cpp
